src/App.module.css
.App {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 100%;
  position: relative;
  overflow: hidden;

  /* https://uigradients.com/#Dania */
  background: #be93c5; /* fallback for old browsers */
  background: linear-gradient(to right, #be93c5, #7bc6cc);
}

.displayWrapper {
  margin-top: 2em;
  background-color: white;
  width: 25em;
  border-radius: 5px;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 0 0 2em 0;
}

.displayWrapper h2 {
  font-size: 1.9em;
}


.display{
  height: 2em;
  font-family: Musiqwik;
  font-size: 7rem;
  display: flex;
  justify-content: center;
  align-items: center;
  white-space: nowrap;
  letter-spacing: -3px; /* To fix the gap between the notes */
  font-weight: normal;
}

.keyboard {
  display: flex;
  margin-top: 0.5em;
  justify-content: center;
  align-items: center;
  /* background: #222;
  box-shadow: 0 0 50px rgba(0,0,0,0.5) inset, 0 1px rgba(212,152,125,0.2) inset, 0 5px 15px rgba(0,0,0,0.5); */
  border-radius: 5px;
  height: 20em;
  width: 100%;
  user-select: none;
  font-size: 120%;
}

/* White keys */
.keyboard div {
  height: 16em;
  width: 3.5em;
  min-width: 3em;
  padding: 1em;
  display: flex;
  justify-content: center;
  align-items: flex-end;
  position: relative;
  cursor: pointer;
  border-left: 1px solid #bbb;
  border-bottom: 1px solid #bbb;
  border-radius: 0 0 5px 5px;
  box-shadow: -1px 0 0 rgba(255,255,255,0.8) inset, 0 0 5px #ccc inset, 0 0 3px rgba(0,0,0,0.2);
  background: linear-gradient(to bottom,#eee 0%,#fff 100%);
}

.keyboard div p {
  font-size: 1.2em;
}

/* Black keys */
.keyboard div:active{
  border-left: 1px solid #999;
  border-bottom: 1px solid #999;
  box-shadow: 2px 0 3px rgba(0,0,0,0.1) inset, -5px 5px 20px rgba(0,0,0,0.2) inset, 0 0 3px rgba(0,0,0,0.2);
  background: linear-gradient(to bottom,#fff 0%,#e9e9e9 100%);
}

.keyboard div:last-child{
  border-radius: 0 5px 5px 5px;
}

.keyboard div:first-child {
  border-radius: 5px 0 5px 5px;
}

.keyboard div::after{
  position: absolute;
  content:"";
  height: 50%;
  width: 50%;
  top:0;
  right:-25%;
  z-index:1;
  border: 1px solid #000;
  border-top:0;
  border-radius: 0 0 3px 3px;
  box-shadow: -1px -1px 2px rgba(255,255,255,0.2) inset, 0 -5px 2px 3px rgba(0,0,0,0.6) inset, 0 2px 4px rgba(0,0,0,0.5);
  background: linear-gradient(45deg,#222 0%,#555 100%);
}
.keyboard div:last-child::after{
  content: none;
}

.keyboard div:nth-child(3)::after{
  content: none;
}

